@@ -1,8 +1,8 @@
 .\" t
 .\" This man page is released under the FDL as part of libstdc++-v3.
-.TH Intro 3 "27 March 2002" "GNU libstdc++-v3" "Standard C++ Library"
+.TH C++Intro 3 "25 Febuary 2003" "GNU libstdc++-v3" "Standard C++ Library"
 .SH NAME
-Intro \- Introduction to the GNU libstdc++-v3 man pages
+C++Intro \- Introduction to the GNU libstdc++-v3 man pages
 .SH DESCRIPTION
 This man page serves as a brief introduction to the GNU implementation of
 the Standard C++ Library.  For a better introduction and more complete
@@ -12,10 +12,10 @@ homepage listed at the end.
 .P
 All standard library entities are declared within
 .I namespace std
-and have manual entries beginning with "std_".  For example, to see
+and have manual entries beginning with "std::".  For example, to see
 documentation of the template class
 .I std::vector
-one would use "man std_vector".  Some entities do not have a separate man
+one would use "man std::vector".  Some entities do not have a separate man
 page; for those see the main listing in "man Namespace_Std".
 .P
 All the man pages are automatically generated by Doxygen.  For more
@@ -37,7 +37,7 @@ Binder_functors	Functors which "remember" an argument.
 Comparison_functors	Functors wrapping built-in comparisons.
 Containers	An introduction to container classes.
 Func_ptr_functors	Functors for use with pointers to functions.
-Intro	This page.
+C++Intro	This page.
 Intro_functors	An introduction to function objects, or functors.
 Iterator_types	Programatically distinguishing iterators/pointers.
 Logical_functors	Functors wrapping the Boolean operations.
@@ -112,10 +112,9 @@ need to know about it, but it can be useful.  See FAQ 2.5.
 .TP
 .I libstdc++.so[.N]
 The library implementation in shared object form.  This will be used in
-preference to the static archive form by default.  Currently N will either
-start with 3 or with 4, but your system vendor may change the name as they
-see fit.  If N is in the 2.x series, then you are looking at the old
-libstdc++-v2 library, which we do not maintain.
+preference to the static archive form by default.  N will be a number equal
+to or greater than 3.  If N is in the 2.x series, then you are looking at
+the old libstdc++-v2 library, which we do not maintain.
 .TP
 .I libstdc++.la
 .TP
