@@ -84,9 +84,8 @@
    libstdc++-html-*/index.html into a browser.  Feedback (and
    additional documentation!) is welcome.
 </p>
-<p>
- In addition, an initial set of man pages are also available in the
- same place as the HTML collections.  Start with Intro(3).
+<p>In addition, an initial set of man pages are also available in the
+   same place as the HTML collections.  Start with C++Intro(3).
 </p>
 
 
